--- a/ConfigStoreDemo/Pages/Index.cshtml
+++ b/ConfigStoreDemo/Pages/Index.cshtml
@@ -5,6 +5,16 @@
 
 }
 
+@section InlineStyles {
+    .center {
+        font-size: @ViewData["FontSize"]px;
+    }
+
+    body {
+        background-color: @ViewData["BackgroundColor"];
+    }
+}
+
 <div class="center" id="messageBox">
 </div>
 
